# swarmbox

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: jekyll-gh-pages.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  SECURITY.md  SETUP.md  _config.yml
docs/_includes/: head_custom.html
docs/_sass/color_schemes/: lab.scss
docs/community/: index.md
docs/pages/: INDEX.md  LICENSE.md  SETUP.md  index.md
docs/pages/community/: index.md
docs/pages/releases/: index.md  v0.1.md  v0.2.md
scripts/: cleanup.sh  functionality_check.sh  px4_swarm_tmux.sh  requirements.txt  setup.sh
swarmbox_ws/analysis/: plotter.py
swarmbox_ws/analysis/paper_references/: README.md
swarmbox_ws/analysis/paper_references/RQ2/: data_extractor.py  quantitative_analysis.py
swarmbox_ws/analysis/paper_references/RQ3/: analyze_drift.py  analyze_network.py  execute.py
swarmbox_ws/analysis/paper_references/RQ4/: converter.py  delivery_create_coords.py  plot_results.py
swarmbox_ws/run/: execute.py
swarmbox_ws/run/RQ1/config/: rq1_adaptive.yaml  rq1_optimized.yaml  rq1_socratic.yaml
swarmbox_ws/run/RQ2/config/: rq2_sim2real.yaml
swarmbox_ws/run/RQ3/: experiment_drift.py  experiment_network.py  gps_drift.py
swarmbox_ws/run/RQ3/config/: rq3_faulty.yaml
swarmbox_ws/run/RQ4/: RQ4_experiment_automation.py
swarmbox_ws/run/RQ4/config/: rq4_1.yaml  rq4_10.yaml  rq4_11.yaml  rq4_12.yaml  rq4_13.yaml  rq4_14.yaml  rq4_15.yaml  rq4_16.yaml  rq4_17.yaml  rq4_18.yaml  rq4_19.yaml  rq4_2.yaml  rq4_20.yaml  rq4_3.yaml  rq4_4.yaml  rq4_5.yaml  rq4_6.yaml  rq4_7.yaml  rq4_8.yaml  rq4_9.yaml
swarmbox_ws/run/RQ5/config/: airview.yaml  airview_16.yaml  delivery.yaml  delivery_16.yaml  formation.yaml  formation_16.yaml  network.yaml  network_16.yaml  tracking.yaml
swarmbox_ws/src/rq1/rq1_adaptive/: CMakeLists.txt  package.xml
swarmbox_ws/src/rq1/rq1_adaptive/src/: idrone.cpp  iground.cpp
swarmbox_ws/src/rq1/rq1_optimized/: CMakeLists.txt  package.xml
swarmbox_ws/src/rq1/rq1_optimized/src/: idrone.cpp  iground.cpp
swarmbox_ws/src/rq1/rq1_socratic/: CMakeLists.txt  LICENSE  package.xml
swarmbox_ws/src/rq1/rq1_socratic/src/: idrone.cpp  iground.cpp
swarmbox_ws/src/rq2/rq2_sim2real/: CMakeLists.txt  package.xml
swarmbox_ws/src/rq2/rq2_sim2real/src/: idrone.cpp  iground.cpp
swarmbox_ws/src/rq3/rq3_faulty/: CMakeLists.txt  package.xml
swarmbox_ws/src/rq3/rq3_faulty/launch/: launchdrones.py  (+1 more)
swarmbox_ws/src/rq4/rq4_delivery/: CMakeLists.txt  package.xml
swarmbox_ws/src/rq5/airview/: CMakeLists.txt  package.xml
swarmbox_ws/src/rq5/delivery/: CMakeLists.txt  package.xml
swarmbox_ws/src/rq5/formation/: CMakeLists.txt  package.xml
swarmbox_ws/src/rq5/network/: CMakeLists.txt  package.xml
swarmbox_ws/src/rq5/tracking/: CMakeLists.txt  LICENSE  package.xml
swarmbox_ws/src/rq5/tracking/src/: idrone.cpp  iground.cpp
swarmbox_ws/src/sample/: CMakeLists.txt  package.xml
swarmbox_ws/src/sample/src/: idrone.cpp  iground.cpp
swarmbox_ws/src/sb_base/: CMakeLists.txt  package.xml
swarmbox_ws/src/sb_base/include/sb_base/: drone.hpp  ground.hpp  sb_node.hpp
swarmbox_ws/src/sb_base/launch/: individual_drone.py  launchdrones.py  launchground.py
swarmbox_ws/src/sb_base/msg/: Heartbeat.msg  ProxAlert.msg  Report.msg  TaskCommand.msg
swarmbox_ws/src/sb_base/src/: drone.cpp  ground.cpp
(+13 files in other folders)
