<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sb_base</name>
  <version>0.1.0</version>
  <description>SwarmBox Base Node Packages</description>
  <maintainer email="40240902+leeminki02@users.noreply.github.com">Minki Lee</maintainer>
  <license>MIT</license>

  <build_depend>ros_environment</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>launch</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>px4_msgs</depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
